--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ anaconda-navigator==1.10.0
 anaconda-project==0.8.3
 anyio==4.3.0
 argh==0.26.2
-argon2-cffi @ file:///C:/ci/argon2-cffi_1596828585465/work
+#argon2-cffi @ file:///C:/ci/argon2-cffi_1596828585465/work
 args==0.1.0
 asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
 astor==0.8.1
