--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ anyio==4.3.0
 argh==0.26.2
 #argon2-cffi @ file:///C:/ci/argon2-cffi_1596828585465/work
 args==0.1.0
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
+#asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
 astor==0.8.1
 astroid @ file:///C:/ci/astroid_1592487315634/work
 astropy==4.0.2
