--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,17 @@ anaconda-navigator==1.10.0
 anaconda-project==0.8.3
 anyio==4.3.0
 argh==0.26.2
-#argon2-cffi @ file:///C:/ci/argon2-cffi_1596828585465/work
+#argon2-cffi
 args==0.1.0
-#asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
+#asn1crypto
 astor==0.8.1
-astroid @ file:///C:/ci/astroid_1592487315634/work
+astroid
 astropy==4.0.2
 astunparse==1.6.3
 async-generator==1.10
 atomicwrites==1.4.0
 attrs==23.2.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
+autopep8
 Babel==2.14.0
 backcall==0.2.0
 backports.functools-lru-cache==1.6.1
@@ -26,19 +26,19 @@ backports.weakref==1.0.post1
 backports.zoneinfo==0.2.1
 base58==2.1.0
 bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
-bitarray @ file:///C:/ci/bitarray_1605065210072/work
+beautifulsoup4
+bitarray
 bkcharts==0.2
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+bleach
 blinker==1.4
-bokeh @ file:///C:/ci/bokeh_1603297934731/work
+bokeh
 boto==2.49.0
 Bottleneck==1.3.2
 brewer2mpl==1.4.1
 brotlipy==0.7.0
 cachetools==4.2.1
 certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1600699246375/work
+cffi
 chardet==4.0.0
 charset-normalizer==3.3.2
 click==7.1.2
