--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ absl-py==0.12.0
 alabaster==0.7.12
 altair==4.1.0
 anaconda-client==1.2.2
-anaconda-navigator==1.10.0
+#anaconda-navigator==1.10.0
 anaconda-project==0.8.3
 anyio==4.3.0
 argh==0.26.2
