--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ alabaster==0.7.12
 altair==4.1.0
 anaconda-client==1.2.2
 #anaconda-navigator==1.10.0
-anaconda-project==0.8.3
+#anaconda-project==0.8.3
 anyio==4.3.0
 argh==0.26.2
 argon2-cffi
