--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 absl-py==0.12.0
 alabaster==0.7.12
 altair==4.1.0
-anaconda-client==1.2.2
-#anaconda-navigator==1.10.0
-anaconda-project==0.8.3
+anaconda-client
+anaconda-navigator
+anaconda-project
 anyio==4.3.0
 argh==0.26.2
 argon2-cffi
@@ -62,7 +62,6 @@ cytoolz==0.11.0
 dask
 dataclasses==0.6
 decorator==4.4.2
-deepface==0.0.50
 defusedxml==0.6.0
 diff-match-patch
 distributed
@@ -84,22 +83,10 @@ future==0.18.2
 gast==0.3.3
 gdown==3.12.2
 gevent
-ggplot==0.11.5
 gin-config==0.4.0
 gitdb==4.0.7
 GitPython==3.1.18
 glob2==0.7
-google-api-core==1.26.3
-google-api-python-client==2.1.0
-google-auth==1.28.1
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.4
-google-cloud-bigquery==2.13.1
-google-cloud-core==1.6.0
-google-crc32c==1.1.2
-google-pasta==0.2.0
-google-resumable-media==1.2.0
-googleapis-common-protos==1.53.0
 graphviz==0.17
 greenlet
 grpcio==1.32.0
@@ -107,8 +94,6 @@ gTTS==2.2.3
 h5py==2.10.0
 HeapDict==1.0.1
 html5lib
-ibm-cloud-sdk-core==3.10.1
-ibm-watson==5.2.2
 idna==2.10
 imageio
 imageio-ffmpeg==0.4.8
@@ -132,9 +117,9 @@ json5==0.9.5
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter==1.0.0
-jupyter-client==8.6.1
+jupyter-client
 jupyter-console
-jupyter-core==5.7.1
+jupyter-core
 jupyter-events==0.9.0
 jupyter-server==2.13.0
 jupyter-server-terminals==0.5.2
