--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ absl-py==0.12.0
 alabaster==0.7.12
 altair==4.1.0
 anaconda-client
-anaconda-navigator
-anaconda-project
+#anaconda-navigator
+#anaconda-project
 anyio==4.3.0
 argh==0.26.2
 argon2-cffi
