--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ sniffio==1.2.0
 testpath==0.4.4
 tornado==6.1
 traitlets==5.0.5
-voila
+voila==0.5.5
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
