--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,12 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==2.11.3
-jsonschema==3.2.0
-jupyter-client==6.1.11
-jupyter-core==4.7.1
-jupyter-server==1.3.0
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
+#jsonschema==3.2.0
+#jupyter-client==6.1.11
+3jupyter-core==4.7.1
+#jupyter-server==1.3.0
+#jupyterlab-pygments==0.1.2
+#jupyterlab-widgets==1.0.0
 MarkupSafe==1.1.1
 mistune==0.8.4
 nbclient==0.5.2
@@ -47,7 +47,7 @@ Pygments==2.8.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
-pywinpty==0.5.7
+#pywinpty==0.5.7
 pyzmq==22.0.3
 Send2Trash==1.5.0
 six==1.15.0
