--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ jedi==0.18.0
 #jupyter-server==1.3.0
 #jupyterlab-pygments==0.1.2
 #jupyterlab-widgets==1.0.0
-MarkupSafe==1.1.1
+MarkupSafe
 mistune==0.8.4
 nbclient
 nbconvert
