--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-anyio==2.1.0
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
-bleach==3.3.0
-cffi==1.14.5
-colorama==0.4.4
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-idna==3.1
-ipykernel==5.4.3
-ipython==7.20.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
+anyio
+argon2-cffi
+async-generator
+attrs
+backcall
+bleach
+cffi
+colorama
+decorator
+defusedxml
+entrypoints
+idna
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+jedi
 #Jinja2
 #jsonschema==3.2.0
 #jupyter-client==6.1.11
@@ -23,39 +23,39 @@ jedi==0.18.0
 #jupyterlab-pygments==0.1.2
 #jupyterlab-widgets==1.0.0
 MarkupSafe
-mistune==0.8.4
+mistune
 nbclient
 nbconvert
-nbformat==5.1.2
-nest-asyncio==1.5.1
+nbformat
+nest-asyncio
 notebook
-packaging==20.9
-pandocfilters==1.4.3
+packaging
+pandocfilters
 matplotlib-inline
 numexpr
 numpy
 pandas
 pandocfilters
 scikit-learn
-scipy==1.11.4
-parso==0.8.1
-pickleshare==0.7.5
-prometheus-client==0.9.0
-prompt-toolkit==3.0.16
-pycparser==2.20
-Pygments==2.8.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-#pywinpty==0.5.7
-pyzmq==22.0.3
-Send2Trash==1.5.0
-six==1.15.0
-sniffio==1.2.0
-testpath==0.4.4
-tornado==6.1
-traitlets==5.0.5
+scipy
+parso
+pickleshare
+prometheus-client
+prompt-toolkit
+pycparser
+Pygments
+pyparsing
+pyrsistent
+python-dateutil
+#pywinpty
+pyzmq
+Send2Trash
+six
+sniffio
+testpath
+tornado
+traitlets
 voila==0.5.5
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
+wcwidth
+webencodings
+widgetsnbextension
